<resources>
    <string name="app_name">HR Management System</string>
    <string name="btn_search">Search</string>
    <string name="label_name">Name</string>
    <string name="label_birthday">Date of birth</string>
    <string name="label_place_of_birth">Place of birth</string>
    <string name="label_phone">Phone number</string>
    <string name="label_department">Department</string>
    <string name="label_status">Status</string>
    <string name="label_position">Position</string>
    <string name="btn_ok">OK</string>
    <string name="btn_edit">Edit</string>
    <string name="position_trainee">Trainee</string>
    <string name="position_intern">Internship</string>
    <string name="position_official">Official Staff</string>
    <string name="status_active">Active</string>
    <string name="status_left">Left</string>
    <string name="change_department">Choose department</string>
    <string name="change_date">Change date</string>
    <string name="btn_apply">Apply changes</string>
    <string name="error_empty_field">Please input in all the fields!</string>
    <string name="error_update_staff">An error has occured while trying to update staff details!</string>
    <string name="successful_add_staff">New staff has been succesfully added!</string>
    <string name="error_insert_staff">An error has occured while trying to add new staff!</string>
    <string name="successful_update_staff">Successfully updated staff!</string>
    <string name="edit_staff">Edit</string>
</resources>