<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.framgia.nguyenthanhhai.humanresourcemanagementsystem.ui.activity.EditActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding_16dp"
                android:background="@null"
                android:hint="@string/label_name" />

            <EditText
                android:id="@+id/edit_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding_16dp"
                android:background="@null"
                android:hint="@string/label_birthday" />

            <EditText
                android:id="@+id/edit_pob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding_16dp"
                android:background="@null"
                android:hint="@string/label_place_of_birth" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding_16dp"
                android:background="@null"
                android:hint="@string/label_phone"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/default_padding_16dp"
                android:paddingStart="@dimen/default_padding_16dp"
                android:text="@string/label_department" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding_8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_department_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_padding_16dp"
                    android:textColor="@android:color/black"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_change_department_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_padding_16dp"
                    android:text="@string/change_department"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/default_padding_16dp"
                android:paddingStart="@dimen/default_padding_16dp"
                android:paddingTop="@dimen/default_padding_8dp"
                android:text="@string/label_position" />

            <RadioGroup
                android:id="@+id/radio_group_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/default_padding_8dp"
                android:paddingStart="@dimen/default_padding_8dp">

                <RadioButton
                    android:id="@+id/radio_btn_trainee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position_trainee" />

                <RadioButton
                    android:id="@+id/radio_btn_intern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding_8dp"
                    android:text="@string/position_intern" />

                <RadioButton
                    android:id="@+id/radio_btn_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding_8dp"
                    android:text="@string/position_official" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/default_padding_16dp"
                android:paddingStart="@dimen/default_padding_16dp"
                android:paddingTop="@dimen/default_padding_8dp"
                android:text="@string/label_status" />

            <RadioGroup
                android:id="@+id/radio_group_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/default_padding_8dp"
                android:paddingStart="@dimen/default_padding_8dp">

                <RadioButton
                    android:id="@+id/radio_btn_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_active" />

                <RadioButton
                    android:id="@+id/radio_btn_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding_8dp"
                    android:text="@string/status_left" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

</LinearLayout>